Fixed: Page title on admin_user.php was double html entity encoded. Fixed: Adding permissions to a new user account was reusing a GID in GROUP_PERMS. Added: bh_exception_arg_handler function to process exception trace into readable arguments. Changed: Removed db_throw_exception and made db functions throw exceptions directly. Changed: Added CSS selector for error_handler pre.

--- a/forum/styles/default/style.css
+++ b/forum/styles/default/style.css
@@ -439,6 +439,10 @@ p, h1, h2 {
     width: 560px;
 }
 
+.error_handler_details pre {
+    font-size: 120%;
+}
+
 .error_msg {
     background-color: #FDFC9F;
     border: 1px solid #000000;
